@@ -1,27 +1,35 @@
 /* config.h for CMake builds */
 
-#cmakedefine HAVE_DIRENT_H
-#cmakedefine HAVE_UNISTD_H
-#cmakedefine HAVE_SYS_STAT_H
-#cmakedefine HAVE_SYS_TYPES_H
-#cmakedefine HAVE_TYPE_TRAITS_H
-#cmakedefine HAVE_BITS_TYPE_TRAITS_H
+#cmakedefine HAVE_DIRENT_H 1
+#cmakedefine HAVE_SYS_STAT_H 1
+#cmakedefine HAVE_SYS_TYPES_H 1
+#cmakedefine HAVE_UNISTD_H 1
+#cmakedefine HAVE_WINDOWS_H 1
 
-#cmakedefine HAVE_BCOPY
-#cmakedefine HAVE_MEMMOVE
-#cmakedefine HAVE_STRERROR
+#cmakedefine HAVE_TYPE_TRAITS_H 1
+#cmakedefine HAVE_BITS_TYPE_TRAITS_H 1
 
-#cmakedefine PCRE_STATIC
+#cmakedefine HAVE_BCOPY 1
+#cmakedefine HAVE_MEMMOVE 1
+#cmakedefine HAVE_STRERROR 1
+#cmakedefine HAVE_STRTOLL 1
+#cmakedefine HAVE_STRTOQ 1
+#cmakedefine HAVE__STRTOI64 1
 
-#cmakedefine SUPPORT_UTF8
-#cmakedefine SUPPORT_UCP
-#cmakedefine EBCDIC
-#cmakedefine BSR_ANYCRLF
-#cmakedefine NO_RECURSE
+#cmakedefine PCRE_STATIC 1
 
-#cmakedefine SUPPORT_LIBBZ2
-#cmakedefine SUPPORT_LIBZ
-#cmakedefine SUPPORT_LIBREADLINE
+#cmakedefine SUPPORT_UTF8 1
+#cmakedefine SUPPORT_UCP 1
+#cmakedefine EBCDIC 1
+#cmakedefine BSR_ANYCRLF 1
+#cmakedefine NO_RECURSE 1
+
+#cmakedefine HAVE_LONG_LONG 1
+#cmakedefine HAVE_UNSIGNED_LONG_LONG 1
+
+#cmakedefine SUPPORT_LIBBZ2 1
+#cmakedefine SUPPORT_LIBZ 1
+#cmakedefine SUPPORT_LIBREADLINE 1
 
 #define NEWLINE			@NEWLINE@
 #define POSIX_MALLOC_THRESHOLD	@PCRE_POSIX_MALLOC_THRESHOLD@
